--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
-    "files.autoSave": "onFocusChange",
-    "editor.fontSize": 18,
-    "editor.wordWrap": "on",
-    "terminal.integrated.fontSize": 16
+  "files.autoSave": "onFocusChange",
+  "editor.fontSize": 18,
+  "editor.wordWrap": "on",
+  "terminal.integrated.fontSize": 16,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true
 }
