--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material-nextjs": "^6.3.1",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
