--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/material-nextjs": "^6.3.1",
+    "@mui/x-data-grid": "^7.25.0",
     "@toolpad/core": "latest",
     "next": "15.1.3",
     "react": "^19.0.0",
